--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,55 @@ body {
     body {
       grid-template-columns: 1.56fr 1fr;
       grid-template-rows: 1fr; } }
-  body main {
-    z-index: 1;
+  body header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: 60px auto;
+    grid-gap: 1rem;
+    background-color: white;
+    width: 100vw;
+    z-index: 3; }
+    @media only screen and (min-width: 40em) {
+      body header {
+        grid-template-columns: repeat(2, auto);
+        grid-gap: 2rem;
+        margin: 6rem 0 5rem 10%;
+        width: auto;
+        background-color: #f0f0f0;
+        padding: 1rem;
+        border-radius: 90px; } }
+    body header div.burger {
+      grid-column: 1;
+      display: grid;
+      justify-items: start; }
+      @media only screen and (min-width: 40em) {
+        body header div.burger {
+          justify-items: end; } }
+      body header div.burger svg {
+        margin: 1.76rem .9rem 0 14px;
+        padding: .75rem; }
+        @media only screen and (min-width: 40em) {
+          body header div.burger svg {
+            margin: 2.45rem 0 0 0;
+            padding: 0; } }
+    body header h1 {
+      font-family: ff-scala, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      align-self: end;
+      color: #434343;
+      grid-column: 2;
+      font-size: 2.75rem; }
+      @media only screen and (min-width: 40em) {
+        body header h1 {
+          margin: 0;
+          padding: 1rem 2rem 1rem 1rem;
+          line-height: 1;
+          font-size: 6rem;
+          align-self: start; } }
+  body main.titlepage {
     display: grid;
     grid-template-rows: auto 450px 1fr auto;
     margin: 0;
@@ -20,123 +67,136 @@ body {
     grid-row: 1;
     grid-column: 1; }
     @media only screen and (min-width: 40em) {
-      body main {
+      body main.titlepage {
         padding: 6rem 0 5rem 6rem;
         grid-column: 1;
         height: 100%;
         grid-template-rows: repeat(3, auto);
         background-color: #F0F0F0; } }
-    body main header {
+    body main.titlepage section {
       z-index: 2;
-      position: fixed;
-      grid-row: 1;
-      display: grid;
-      grid-template-columns: 60px auto;
-      grid-gap: 1rem;
-      background-color: white;
-      width: 100vw; }
-      @media only screen and (min-width: 40em) {
-        body main header {
-          grid-row: 1;
-          grid-template-columns: repeat(2, auto);
-          grid-gap: 3rem;
-          padding: 0 0 0 10%;
-          width: auto;
-          background-color: transparent;
-          background: #f0f0f0;
-          background: radial-gradient(circle, #f0f0f0 0%, #f0f0f0 68%, rgba(240, 240, 240, 0) 100%); } }
-      body main header nav {
-        grid-column: 1;
-        display: grid;
-        justify-items: start; }
-        @media only screen and (min-width: 40em) {
-          body main header nav {
-            justify-items: end; } }
-        body main header nav svg {
-          margin: 1.76rem .9rem 0 14px;
-          padding: .75rem; }
-          @media only screen and (min-width: 40em) {
-            body main header nav svg {
-              margin: 1.45rem 0 0 0;
-              padding: 0; } }
-      body main header h1 {
-        font-family: ff-scala, sans-serif;
-        font-style: normal;
-        font-weight: bold;
-        align-self: end;
-        color: #434343;
-        grid-column: 2;
-        font-size: 2.75rem; }
-        @media only screen and (min-width: 40em) {
-          body main header h1 {
-            margin: 0;
-            padding: 0;
-            line-height: 1;
-            font-size: 6rem;
-            align-self: start; } }
-    body main section {
       grid-row: 3;
-      background-color: #F0F0F0; }
+      background-color: #F0F0F0;
+      height: 450px;
+      overflow: visible; }
       @media only screen and (min-width: 40em) {
-        body main section {
+        body main.titlepage section {
           grid-row: 2;
           padding: 7rem 7rem 0 38%;
-          background-color: transparent; } }
-      body main section p {
+          background-color: transparent;
+          overflow: scroll; } }
+      body main.titlepage section p {
         font-family: chainprinter, sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 1.2rem;
-        padding-left: 4rem;
+        padding: 15px 1rem 0 4rem;
         line-spacing: 26; }
         @media only screen and (min-width: 40em) {
-          body main section p {
+          body main.titlepage section p {
             font-size: 1.5rem;
             padding: 0; } }
-    body main footer {
-      grid-row: 4;
-      align-self: end;
-      padding: 0 .2rem;
-      background-color: white; }
-      @media only screen and (min-width: 40em) {
-        body main footer {
-          padding: 0 5% 0 40%;
-          grid-row: 3;
-          background-color: transparent;
-          margin: 45px 0 0 0; } }
-      body main footer p {
-        font-size: .59rem;
-        font-family: chainprinter, sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        padding: 0 1rem; }
-        @media only screen and (min-width: 40em) {
-          body main footer p {
-            font-size: .75rem;
-            padding: 0; } }
-  body div {
-    z-index: 0;
+  body div.art {
     grid-row: 1;
-    grid-column: 1; }
+    grid-column: 1;
+    z-index: 0; }
     @media only screen and (min-width: 40em) {
-      body div {
-        z-index: 0;
+      body div.art {
+        grid-row: 1;
         grid-column: 2; } }
-    body div img {
+    body div.art .egypt {
+      z-index: 0;
+      grid-column: 1;
       object-fit: cover;
       height: 400px;
       width: 230px;
       transform: rotate(-6deg) translateY(120px) translateX(70px); }
       @media only screen and (min-width: 40em) {
-        body div img {
+        body div.art .egypt {
           height: 900px;
           width: 490px;
           transform: rotate(-4deg) translateY(140px) translateX(100px);
           position: fixed;
           transition: all .4s; }
-          body div img:hover {
+          body div.art .egypt:hover {
             transform: rotate(-6deg) translateY(130px) translateX(90px) scale(1.03);
             position: fixed;
             filter: drop-shadow(0 0 0.3rem lightgrey); } }
+  body footer {
+    z-index: 4;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    align-self: end;
+    background-color: white;
+    width: 100vw;
+    padding: 0;
+    margin: 0; }
+    @media only screen and (min-width: 40em) {
+      body footer {
+        margin: 6rem 0 5rem 10%;
+        padding: 0px 0% 100px 32%;
+        background-color: transparent;
+        margin: 45px 0 0 0;
+        width: 910px; } }
+    body footer p {
+      font-size: .59rem;
+      font-family: chainprinter, sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      padding: 0 1rem; }
+      @media only screen and (min-width: 40em) {
+        body footer p {
+          font-size: .75rem;
+          padding: 0; } }
+
+.overlay {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.8);
+  transition: all .4s;
+  z-index: 10; }
+
+.content {
+  height: 80%;
+  width: 60vw;
+  background-color: #efefef;
+  padding: 1rem;
+  border-radius: 30px;
+  overflow: scroll;
+  border: solid #efefef 20px; }
+  .content nav {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr; }
+    .content nav ul {
+      margin: 0;
+      list-style: none;
+      columns: 3;
+      column-gap: 1rem;
+      padding: 1rem; }
+    .content nav li {
+      padding-top: 1rem; }
+      .content nav li img {
+        display: block;
+        width: 100%;
+        margin-bottom: 1rem; }
+        .content nav li img:hover {
+          transform: rotate(-6deg);
+          filter: drop-shadow(0 0 0.3rem lightgrey); }
+
+.hide {
+  display: none;
+  z-index: 0; }
+
+.fade {
+  opacity: 0; }
 
 /*# sourceMappingURL=main.css.map */
