--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
         grid-gap: 2rem;
         margin: 6rem 0 5rem 10%;
         width: auto;
-        background-color: #f0f0f0;
+        background-color: transparent;
         padding: 1rem;
         border-radius: 90px; } }
     body header div.burger {
@@ -59,7 +59,7 @@ body {
           line-height: 1;
           font-size: 6rem;
           align-self: start; } }
-  body main.titlepage {
+  body main.site-main {
     display: grid;
     grid-template-rows: auto 450px 1fr auto;
     margin: 0;
@@ -67,25 +67,25 @@ body {
     grid-row: 1;
     grid-column: 1; }
     @media only screen and (min-width: 40em) {
-      body main.titlepage {
+      body main.site-main {
         padding: 6rem 0 5rem 6rem;
         grid-column: 1;
         height: 100%;
         grid-template-rows: repeat(3, auto);
         background-color: #F0F0F0; } }
-    body main.titlepage section {
+    body main.site-main section {
       z-index: 2;
       grid-row: 3;
       background-color: #F0F0F0;
       height: 450px;
       overflow: visible; }
       @media only screen and (min-width: 40em) {
-        body main.titlepage section {
+        body main.site-main section {
           grid-row: 2;
           padding: 7rem 7rem 0 38%;
           background-color: transparent;
           overflow: scroll; } }
-      body main.titlepage section p {
+      body main.site-main section p {
         font-family: chainprinter, sans-serif;
         font-style: normal;
         font-weight: 400;
@@ -93,18 +93,18 @@ body {
         padding: 15px 1rem 0 4rem;
         line-spacing: 26; }
         @media only screen and (min-width: 40em) {
-          body main.titlepage section p {
+          body main.site-main section p {
             font-size: 1.5rem;
             padding: 0; } }
-  body div.art {
+  body div.arthome {
     grid-row: 1;
     grid-column: 1;
     z-index: 0; }
     @media only screen and (min-width: 40em) {
-      body div.art {
+      body div.arthome {
         grid-row: 1;
         grid-column: 2; } }
-    body div.art .egypt {
+    body div.arthome .egypt {
       z-index: 0;
       grid-column: 1;
       object-fit: cover;
@@ -112,13 +112,13 @@ body {
       width: 230px;
       transform: rotate(-6deg) translateY(120px) translateX(70px); }
       @media only screen and (min-width: 40em) {
-        body div.art .egypt {
+        body div.arthome .egypt {
           height: 900px;
           width: 490px;
           transform: rotate(-4deg) translateY(140px) translateX(100px);
           position: fixed;
           transition: all .4s; }
-          body div.art .egypt:hover {
+          body div.arthome .egypt:hover {
             transform: rotate(-6deg) translateY(130px) translateX(90px) scale(1.03);
             position: fixed;
             filter: drop-shadow(0 0 0.3rem lightgrey); } }
@@ -134,11 +134,14 @@ body {
     margin: 0; }
     @media only screen and (min-width: 40em) {
       body footer {
-        margin: 6rem 0 5rem 10%;
-        padding: 0px 0% 100px 32%;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
         background-color: transparent;
         margin: 45px 0 0 0;
-        width: 910px; } }
+        width: 30vw;
+        position: fixed;
+        left: 29%;
+        bottom: 8%; } }
     body footer p {
       font-size: .59rem;
       font-family: chainprinter, sans-serif;
@@ -149,6 +152,21 @@ body {
         body footer p {
           font-size: .75rem;
           padding: 0; } }
+    body footer ul {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      list-style: none; }
+      body footer ul li {
+        font-family: ff-scala, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        color: #434343;
+        grid-column: 2;
+        font-size: 1.5rem; }
+        body footer ul li a {
+          text-decoration: none; }
+      body footer ul li:nth-child(1) {
+        grid-column: 1; }
 
 .overlay {
   height: 100vh;
@@ -166,12 +184,16 @@ body {
 
 .content {
   height: 80%;
-  width: 60vw;
+  width: 90vw;
   background-color: #efefef;
   padding: 1rem;
   border-radius: 30px;
   overflow: scroll;
   border: solid #efefef 20px; }
+  @media only screen and (min-width: 40em) {
+    .content {
+      height: 80%;
+      width: 60vw; } }
   .content nav {
     display: grid;
     grid-template-rows: 1fr;
@@ -198,5 +220,99 @@ body {
 
 .fade {
   opacity: 0; }
+
+@media only screen and (min-width: 40em) {
+  body.artwork {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    max-width: 1600px; } }
+body.artwork main {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr 1fr; }
+  @media only screen and (min-width: 40em) {
+    body.artwork main {
+      height: 100%;
+      grid-template-rows: 1fr;
+      grid-template-columns: .85fr 420px 1fr; } }
+  body.artwork main section.title {
+    display: grid;
+    grid-row: 1;
+    grid-column: 2;
+    padding: 0;
+    margin: 0; }
+    @media only screen and (min-width: 40em) {
+      body.artwork main section.title {
+        margin: 0 0px 0 10%;
+        padding-left: 1rem;
+        grid-column: 1;
+        padding-top: 10rem;
+        margin: 0 0px 0 10%;
+        padding-left: 1rem; } }
+    body.artwork main section.title h2 {
+      font-family: ff-scala, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      writing-mode: vertical-lr;
+      transform: rotate(-180deg);
+      margin: 1rem 10px 1rem 12px; }
+      @media only screen and (min-width: 40em) {
+        body.artwork main section.title h2 {
+          font-family: ff-scala, sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 3rem;
+          align-self: center;
+          color: #434343;
+          margin: 0;
+          padding: 0;
+          writing-mode: vertical-lr;
+          transform: rotate(-180deg);
+          padding: 0% 21% 80% 53%; } }
+  body.artwork main img {
+    grid-row: 1;
+    grid-column: 1;
+    object-fit: cover;
+    width: 160%;
+    margin: 6rem 0 0 0; }
+    @media only screen and (min-width: 40em) {
+      body.artwork main img {
+        grid-column: 2;
+        object-fit: cover;
+        width: 100%;
+        margin: 14rem 0 0px 0;
+        overflow: auto;
+        padding-right: 3rem; } }
+  body.artwork main section.copy {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    background-color: #f0f0f0;
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    padding: 2rem; }
+    @media only screen and (min-width: 40em) {
+      body.artwork main section.copy {
+        grid-row: 1;
+        grid-column: 3; } }
+    body.artwork main section.copy h1 {
+      font-family: ff-scala, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 3rem;
+      color: #434343;
+      padding: 0; }
+      @media only screen and (min-width: 40em) {
+        body.artwork main section.copy h1 {
+          font-family: ff-scala, sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 5rem;
+          color: #434343;
+          padding: 6rem 4rem 0 4rem; } }
+    body.artwork main section.copy p {
+      font-family: chainprinter, sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      padding: 3rem 4rem; }
 
 /*# sourceMappingURL=main.css.map */
