--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -31,7 +31,7 @@ body{
    			grid-gap:2rem;
    			margin: 6rem 0 5rem 10%;
    			width:auto;
-   			background-color:#f0f0f0;
+   			background-color:transparent;
    			padding:1rem;
 			border-radius:90px;
    		 }
@@ -75,7 +75,7 @@ body{
 		}
 	}
   	
-  	main.titlepage{
+  	main.site-main{
 		display:grid;
 		grid-template-rows: auto 450px 1fr auto;
 		margin:0;
@@ -125,7 +125,7 @@ body{
 
 	}
   
-  	div.art{
+  	div.arthome{
   		grid-row:1;
   		grid-column:1;
   		z-index:0;
@@ -172,11 +172,15 @@ body{
    		margin:0;
 
    		@media only screen and (min-width: 40em){
-   			margin: 6rem 0 5rem 10%;
-   			padding:0px 0% 100px 32%;
+   			display:grid;
+   			grid-template-columns: repeat(2, auto);
    			background-color:transparent;
    			margin: 45px 0 0 0;
-   			width:910px;
+   			width:30vw;
+   			position:fixed;
+   			left:29%;
+			bottom:8%;
+   			// width:910px;
 
    		}
 
@@ -191,6 +195,28 @@ body{
 				font-size:.75rem;
 				padding:0;
 			}
+		}
+
+		ul{
+			display:grid;
+			grid-template-columns: repeat(2, 1fr);
+			list-style:none;
+			li{
+				font-family: ff-scala, sans-serif;
+      			font-style: normal;
+      			font-weight: bold;
+      			color: #434343;
+				grid-column:2;
+      			font-size:1.5rem;
+      			a{
+      				text-decoration:none;
+      			}
+			}
+			li:nth-child(1){
+				grid-column:1;
+
+			}
+
 		}
 	}
 
