--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,21 +1,28 @@
 .overlay{
-   height:100vh;
-	  display:grid;
-    place-items:center;
-  	position:fixed;
-  	top:0;
-  	left:0;
-  	width:100%;
-  	padding: 0;
-    margin:0;
-    background: rgba(0,0,0,.8);
-    	transition: all .4s;
-      z-index:10;
-
+  height:100vh;
+	display:grid;
+  place-items:center;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  padding: 0;
+  margin:0;
+  background: rgba(0,0,0,.8);
+  transition: all .4s;
+  z-index:10;
 }
+
 .content{
   height:80%;
-  width:60vw;
+  width:90vw;
+
+  @media only screen and (min-width: 40em){
+    height:80%;
+    width:60vw;
+  }
+
+
   background-color:#efefef;
   padding:1rem;
   border-radius:30px;
@@ -26,34 +33,32 @@
     display:grid;
     grid-template-rows:1fr;
     grid-template-columns:1fr;
+
     ul{
       margin:0;
       list-style:none;
       columns: 3;
       column-gap: 1rem;
       padding: 1rem;
-
     }
   
     li{
-        padding-top:1rem;
-        img {
-    display: block;
-    width: 100%;
-    margin-bottom: 1rem;
-    &:hover{
-              transform:rotate(-6deg);
-              filter: drop-shadow(0 0 0.3rem lightgrey);
-            }
-
-  }
+      padding-top:1rem;
+      img {
+        display: block;
+        width: 100%;
+        margin-bottom: 1rem;
+        &:hover{
+          transform:rotate(-6deg);
+          filter: drop-shadow(0 0 0.3rem lightgrey);
+        }
+      }
     }
   }
-  
-  
-    
-  
+
 }
+
+
 .hide{
   display:none;
   z-index:0;
